examples/hello-world/go/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go
  namespace: apps
spec:
  selector:
    app: hello-go
  ports:
    - port: 80
      targetPort: 8080
